--- a/01-ObjectDetection/CenterNet/code/requirements.txt
+++ b/01-ObjectDetection/CenterNet/code/requirements.txt
@@ -1,10 +1,10 @@
-torch
-torchvision
 tensorboard
-scipy==1.2.1
-numpy==1.17.0
+scipy==1.9.3
+numpy
 matplotlib==3.1.2
 opencv_python==4.1.2.30
 tqdm==4.60.0
 Pillow==8.2.0
 h5py==2.10.0
+onnx
+onnxsim
