--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /.vscode
 /01-ObjectDetection/CenterNet/code/weight
+/02-Segmetation/yolact/result_temp
+/02-Segmetation/yolact/logs
+/02-Segmetation/yolact/__pycache__
